--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "vue": "^2.3.3",
+    "vue-baidu-map": "^0.11.2",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
